changed logger to pointer and now can load resources to a temp file.
Signed-off-by: Qiufeng54321 <williamcraft@163.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,35 @@
         "regex": "cpp",
         "thread": "cpp",
         "variant": "cpp",
-        "xlocmon": "cpp"
+        "xlocmon": "cpp",
+        "algorithm": "cpp",
+        "array": "cpp",
+        "cctype": "cpp",
+        "chrono": "cpp",
+        "condition_variable": "cpp",
+        "cstdarg": "cpp",
+        "ctime": "cpp",
+        "deque": "cpp",
+        "filesystem": "cpp",
+        "functional": "cpp",
+        "iomanip": "cpp",
+        "iterator": "cpp",
+        "list": "cpp",
+        "locale": "cpp",
+        "map": "cpp",
+        "mutex": "cpp",
+        "optional": "cpp",
+        "ratio": "cpp",
+        "set": "cpp",
+        "sstream": "cpp",
+        "stack": "cpp",
+        "string": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp",
+        "xhash": "cpp",
+        "xlocbuf": "cpp",
+        "xlocmes": "cpp",
+        "xloctime": "cpp",
+        "xtree": "cpp"
     }
 }
