Embedded raw bmp data can now be buffered directly to SDL_Surface*, not by writing temp files.
Signed-off-by: Qiufeng54321 <williamcraft@163.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,13 @@
         "xlocbuf": "cpp",
         "xlocmes": "cpp",
         "xloctime": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "*.tcc": "cpp",
+        "clocale": "cpp",
+        "codecvt": "cpp",
+        "cwctype": "cpp",
+        "memory_resource": "cpp",
+        "string_view": "cpp",
+        "cinttypes": "cpp"
     }
 }
