--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "spdlog"]
 	path = spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule "visit_struct"]
+	path = visit_struct
+	url = https://github.com/garbageslam/visit_struct
