--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,6 +80,8 @@
         "cwctype": "cpp",
         "memory_resource": "cpp",
         "string_view": "cpp",
-        "cinttypes": "cpp"
+        "cinttypes": "cpp",
+        "charconv": "cpp",
+        "bitset": "cpp"
     }
 }
