--- a/res/pref/sprites.toml
+++ b/res/pref/sprites.toml
@@ -1,65 +1,70 @@
 # Sprite clip config file
-# Structs like [cx, cy, cw, ch, deg, flip]
+# Structs like [cx, cy, cw, ch, dw, dh, deg, flip]
 # Concatenated sprites struct:
 # [
-#      [x, y, cx, cy, cw, ch, deg, flip],
+#      [cx, cy, cw, ch, dx, dy, dw, dh, deg, flip],
 #      [...]    
 # ]
-# where x, y is the rel coord to be drawn,
-# cx, cy, cw, ch is the clip coord and dimension,
+# where cx, cy, cw, ch is the clip coord and dimension,
+# dw, dh is the dest dimension,
+# (dx, dy) represents its relative coord to the
+#  whole sprite if it is declared in a set of clips
+# Dest dimension can have special values:
+# - -1: Stretch to screen size
+# -  0: Texture original size (clip size), 0, 0, 0, 0
 # deg is degree and flip is enum SDL_RendererFlip
 # Flip values: {None = 0, Horizontal = 1, vertical = 2, both = 3}
 arrows = [
-    [1, 1, 6, 6, 0, 0],
-    [1, 1, 6, 6, 0, 1],
-    [9, 1, 6, 6, 0, 0],
-    [9, 1, 6, 6, 0, 2], # Copy previous four
-    [1, 1, 6, 6, 0, 0],
-    [1, 1, 6, 6, 0, 1],
-    [9, 1, 6, 6, 0, 0],
-    [9, 1, 6, 6, 0, 2], # Four diagonal directions
-    [1, 9, 6, 6, 0, 0],
-    [1, 9, 6, 6, 0, 2],
-    [1, 9, 6, 6, 0, 1],
-    [1, 9, 6, 6, 0, 3],
+    [1, 1, 6, 6, 0, 0, 0, 0],
+    [1, 1, 6, 6, 0, 0, 0, 1],
+    [9, 1, 6, 6, 0, 0, 0, 0],
+    [9, 1, 6, 6, 0, 0, 0, 2], # Copy previous four
+    [1, 1, 6, 6, 0, 0, 0, 0],
+    [1, 1, 6, 6, 0, 0, 0, 1],
+    [9, 1, 6, 6, 0, 0, 0, 0],
+    [9, 1, 6, 6, 0, 0, 0, 2], # Four diagonal directions
+    [1, 9, 6, 6, 0, 0, 0, 0],
+    [1, 9, 6, 6, 0, 0, 0, 2],
+    [1, 9, 6, 6, 0, 0, 0, 1],
+    [1, 9, 6, 6, 0, 0, 0, 3],
 ]
 
 [accuracy]
-perfect = [17, 1, 5, 6, 0, 0]
-great = [25, 1, 5, 6, 0, 0]
-bad = [17, 9, 5, 6, 0, 0]
-miss = [25, 9, 5, 6, 0, 0]
+perfect = [17, 1, 5, 6, 0, 0, 0, 0]
+great = [25, 1, 5, 6, 0, 0, 0, 0]
+bad = [17, 9, 5, 6, 0, 0, 0, 0]
+miss = [25, 9, 5, 6, 0, 0, 0, 0]
 
 [score_rank]
-S = [0, 16, 16, 16, 0, 0]
-A = [0, 32, 16, 16, 0, 0]
-B = [16, 16, 16, 16, 0, 0]
-C = [16, 32, 16, 16, 0, 0]
-D = [32, 16, 16, 16, 0, 0]
-F = [32, 32, 16, 16, 0, 0]
+S = [0, 16, 16, 16, 0, 0, 0, 0]
+A = [0, 32, 16, 16, 0, 0, 0, 0]
+B = [16, 16, 16, 16, 0, 0, 0, 0]
+C = [16, 32, 16, 16, 0, 0, 0, 0]
+D = [32, 16, 16, 16, 0, 0, 0, 0]
+F = [32, 32, 16, 16, 0, 0, 0, 0]
 
 [title]
-intro = [0, 48, 80, 16, 0, 0]
-select_left = [32, 4, 5, 9, 0, 0]
-select_right = [32, 4, 5, 9, 0, 2]
-select_up = [40, 5, 7, 4, 0, 0]
-select_down = [40, 5, 7, 4, 0, 1]
-play_unhovered = [48, 0, 16, 16, 0, 0]
-play_hovered = [48, 16, 16, 16, 0, 0]
+intro = [0, 48, 80, 16, 0, 0, 0, 0]
+select_left = [32, 4, 5, 9, 0, 0, 0, 0]
+select_right = [32, 4, 5, 9, 0, 0, 0, 2]
+select_up = [40, 5, 7, 4, 0, 0, 0, 0]
+select_down = [40, 5, 7, 4, 0, 0, 0, 1]
+play_unhovered = [48, 0, 16, 16, 0, 0, 0, 0]
+play_hovered = [48, 16, 16, 16, 0, 0, 0, 0]
 
 [indicator.four_sided]
 size = [32, 32]
 clips = [
-    [0, 0, 48, 32, 16, 16, 0, 0],
-    [0, 16, 48, 32, 16, 16, 0, 2],
-    [16, 0, 48, 32, 16, 16, 0, 1],
-    [16, 16, 48, 32, 16, 16, 0, 3],
+    [48, 32, 16, 16, 0, 0, 0, 0, 0, 0],
+    [48, 32, 16, 16, 0, 16, 0, 0, 0, 2],
+    [48, 32, 16, 16, 16, 0, 0, 0, 0, 1],
+    [48, 32, 16, 16, 16, 16, 0, 0, 0, 3],
 ]
 [indicator.eight_sided]
 size = [32, 32]
 clips = [
-    [0, 0, 64, 32, 16, 16, 0, 0],
-    [0, 16, 64, 32, 16, 16, 0, 2],
-    [16, 0, 64, 32, 16, 16, 0, 1],
-    [16, 16, 64, 32, 16, 16, 0, 3],
+    [64, 32, 16, 16, 0, 0, 0, 0, 0, 0],
+    [64, 32, 16, 16, 0, 16, 0, 0, 0, 2],
+    [64, 32, 16, 16, 16, 0, 0, 0, 0, 1],
+    [64, 32, 16, 16, 16, 16, 0, 0, 0, 3],
 ]
