Fix preference storing and reading problem
Signed-off-by: Qiufeng54321 <williamcraft@163.com>

--- a/res/pref/main.toml
+++ b/res/pref/main.toml
@@ -2,6 +2,8 @@
 fps = 60
 full_screen = false
 music_offset = 0
+sprites_source = "embedded"
+sprites = "pref/sprites.toml"
 
 [control]
 gameplay = [
